fixed misalignment on project page

--- a/css/project.css
+++ b/css/project.css
@@ -32,7 +32,7 @@ img {
 }
 
 .project-row__description {
-	margin: 0px 0px 100px 0px;
+	margin: 0 auto 30px;
 	padding: 0 30px;
 }
 
